[package]
name = "flv"
version = "0.1.0"
authors = ["Mr.Panda<xivistudios@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
regex = "1"
woothee = "*"
serde = "^1.0.59"
serde_derive = "^1.0.59"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.4"
features = [
  "Window",
  "Navigator"
]